--- a/src/main/resources/templates/rawUI/new_user.html
+++ b/src/main/resources/templates/rawUI/new_user.html
@@ -65,7 +65,7 @@
 
             <div class="form-group row">
                 <label>Enabled</label>
-                <input type="checkbox" th:value="*{isEnabled}"/>
+                <input type="checkbox" th:value="*{isEnabled}" th:field="*{enabled}"/>
             </div>
             <div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
