add MapStructMapper, show Employee, Update SPring Security

--- a/src/main/resources/templates/rawUI/role/new_role.html
+++ b/src/main/resources/templates/rawUI/role/new_role.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:align="center">
-  <h1>Create New Product</h1>
+  <h1>Create new Role</h1>
   <br/>
   <form th:action="@{/rawUI/saveRole}" th:object="${role}" method="post">
     <table th:border="0" th:cellpadding="10">
@@ -22,7 +22,7 @@
         </label></td>
       </tr>
       <tr>
-        <td><button type="submit">Save category</button></td>
+        <td><button type="submit">Save role</button></td>
       </tr>
     </table>
   </form>
