--- a/src/main/resources/templates/rawUI/role/new_role.html
+++ b/src/main/resources/templates/rawUI/role/new_role.html
@@ -9,7 +9,7 @@
 <div th:align="center">
   <h1>Create new Role</h1>
   <br/>
-  <form th:action="@{/rawUI/saveRole}" th:object="${role}" method="post">
+  <form th:action="@{/rawUI/admin/saveRole}" th:object="${role}" method="post">
     <table th:border="0" th:cellpadding="10">
       <tr>
         <td><label>Name:
