--- a/src/main/resources/templates/rawUI/employee/edit_employee.html
+++ b/src/main/resources/templates/rawUI/employee/edit_employee.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="ISO-8859-1">
+    <title>Sign Up - CodeJava</title>
 </head>
 <body>
-$END$
+<div class="container text-center">
+    <div>
+        <h1>User Registration - Sign Up</h1>
+    </div>
+    <form th:action="@{'/rawUI/admin/editEmployee/'+ ${employeeUpdateDto.id}} " th:object="${employeeUpdateDto}"
+          method="post" style="max-width: 600px; margin: 0 auto;">
+        <div class="m-3">
+            <div class="form-group row">
+                <label class="col-4 col-form-label">E-mail: </label>
+                <div class="col-8">
+                    <input type="email" th:field="*{email}" class="form-control"  disabled />
+                </div>
+            </div>
+
+<!--            <div class="form-group row">-->
+<!--                <label class="col-4 col-form-label">Password: </label>-->
+<!--                <div class="col-8">-->
+<!--                    <input type="password" th:field="*{password}" class="form-control"-->
+<!--                           required minlength="3" maxlength="10"/>-->
+<!--                </div>-->
+<!--            </div>-->
+
+            <div class="form-group row">
+                <label class="col-4 col-form-label">First Name: </label>
+                <div class="col-8">
+                    <input type="text" th:field="*{firstName}" class="form-control"
+                           required minlength="2" maxlength="20"/>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-4 col-form-label">Last Name: </label>
+                <div class="col-8">
+                    <input type="text" th:field="*{lastName}" class="form-control"
+                           required minlength="2" maxlength="20"/>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-4 col-form-label">Phone: </label>
+                <div class="col-8">
+                    <input type="text" th:field="*{phone}" class="form-control"
+                           required minlength="2" maxlength="20"/>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <!--                <label >Roles:-->
+                <!--                    <input type="checkbox" name="employeeRoles" th:field="*{employeeRoles}" th:each="role : ${allRoles}"-->
+                <!--                           th:text="${role}">-->
+                <!--                </label>-->
+                <th:block th:each="role : ${allRoles}">
+                    <input type="checkbox"  th:field="*{roles}" th:value="${role.id}"/>
+                    <label th:text="${role.name}"></label>
+                </th:block>
+
+            </div>
+
+            <div class="form-group row">
+                <label>Enabled</label>
+                <input type="checkbox" th:value="*{isEnabled}" th:field="*{enabled}"/>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Update</button>
+            </div>
+        </div>
+    </form>
+</div>
 </body>
 </html>
