--- a/src/main/resources/templates/rawUI/employee/new_employee.html
+++ b/src/main/resources/templates/rawUI/employee/new_employee.html
@@ -2,28 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Sign Up - CodeJava</title>
+    <title>Create new Employee</title>
 </head>
 <body>
 <div class="container text-center">
     <div>
-        <h1>User Registration - Sign Up</h1>
+        <h1>Create new Employee</h1>
     </div>
-    <form th:action="@{/rawUI/newUser}" th:object="${employee}"
+    <form th:action="@{/rawUI/admin/newEmployee}" th:object="${employee}"
           method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
-                <label class="col-4 col-form-label">E-mail: </label>
+                <label class="col-4 ">E-mail: </label>
+                <div></div>
                 <div class="col-8">
                     <input type="email" th:field="*{email}" class="form-control" required/>
                 </div>
+                <div class="col-4" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
             </div>
 
             <div class="form-group row">
                 <label class="col-4 col-form-label">Password: </label>
                 <div class="col-8">
                     <input type="password" th:field="*{password}" class="form-control"
-                           required minlength="3" maxlength="10"/>
+                           required minlength="3"/>
                 </div>
             </div>
 
@@ -31,15 +33,19 @@
                 <label class="col-4 col-form-label">First Name: </label>
                 <div class="col-8">
                     <input type="text" th:field="*{firstName}" class="form-control"
-                           required minlength="2" maxlength="20"/>
+                           required minlength="3" maxlength="20"/>
                 </div>
+                <div class="col-4" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First Error</div>
             </div>
 
             <div class="form-group row">
                 <label class="col-4 col-form-label">Last Name: </label>
                 <div class="col-8">
                     <input type="text" th:field="*{lastName}" class="form-control"
-                           required minlength="2" maxlength="20"/>
+                           required minlength="3" maxlength="20"/>
+                    <div class="col-4" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last Name
+                        Error
+                    </div>
                 </div>
             </div>
 
@@ -48,19 +54,16 @@
                 <div class="col-8">
                     <input type="text" th:field="*{phone}" class="form-control"
                            required minlength="2" maxlength="20"/>
+                    <div class="col-4" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Phone Error</div>
                 </div>
             </div>
 
             <div class="form-group row">
-<!--                <label >Roles:-->
-<!--                    <input type="checkbox" name="employeeRoles" th:field="*{employeeRoles}" th:each="role : ${allRoles}"-->
-<!--                           th:text="${role}">-->
-<!--                </label>-->
                 <th:block th:each="role : ${allRoles}">
-                    <input type="checkbox" th:field="*{employeeRoles}" th:value="${role.id}" />
+                    <input type="checkbox" th:field="*{roles}" th:value="${role.id}"/>
                     <label th:text="${role.name}"></label>
                 </th:block>
-
+                <div class="col-4" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">Roles Error</div>
             </div>
 
             <div class="form-group row">
