--- a/src/main/resources/templates/rawUI/login.html
+++ b/src/main/resources/templates/rawUI/login.html
@@ -31,7 +31,7 @@
         <h3>Invalid username and password.</h3>
     </div>
     <div th:if="${param.message}">
-        <h3>[[${param.message}]]</h3>
+        <h3>Invalid username or password</h3>
     </div>
     <div>
         <form th:action="@{/rawUI/login}" method="post">
