--- a/src/main/resources/templates/rawUI/home.html
+++ b/src/main/resources/templates/rawUI/home.html
@@ -41,7 +41,11 @@
 
     <div>
         <h1>List Employees</h1>
-        <a href="/rawUI/admin/newEmployee">Add new Employee</a>
+        <div>
+            <a href="/rawUI/admin/newEmployee">Add new Employee</a>
+            &nbsp;
+            <a href="/rawUI/admin/employees/1">View More</a>
+        </div>
         <br/>
         <br/>
         <table>
