--- a/src/main/resources/templates/rawUI/product/new_phone.html
+++ b/src/main/resources/templates/rawUI/product/new_phone.html
@@ -9,7 +9,7 @@
 <div align="center">
     <h1>Create New Product</h1>
     <br/>
-    <form th:action="@{/rawUI/savePhone}" th:object="${phone}" method="post">
+    <form th:action="@{'/rawUI/products/newPhone'}" th:object="${phone}" method="post">
         <table border="0" cellpadding="10">
             <tr>
                 <td>Product Name:</td>
